# Fantsy_Game

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  resources.qrc
client/assets/ui/: GameScene.qml
client/include/async/: TaskExecutor.h
client/include/controllers/: BaseController.h  GameController.h  InGameController.h  InputController.h  MenuController.h
client/include/core/config/: ConfigManager.h
client/include/core/eventbus/: EventBus.h
client/include/core/plugin/: PluginSystem.h
client/include/core/statemachine/: StateMachine.h
client/include/models/: CharacterModel.h  ItemModel.h  PlayerModel.h  SkillModel.h  WorldModel.h
client/include/network/: ConnectionPool.h  MessageDispatcher.h  MessageHandler.h  NetworkManager.h  PacketParser.h
client/include/ui/: UIButton.h  UIComponent.h  UILabel.h  UIManagerBase.h
client/include/ui/components/: MainMenu.h  PauseMenu.h
client/include/ui/managers/: UIManager.h
client/include/ui/scenes/: GameScene.h
client/include/ui/windows/: MainWindow.h
client/include/utils/: FileUtils.h  Logger.h  ThreadUtils.h  TimeUtils.h
client/src/: main.cpp
client/src/controllers/: GameController.cpp
client/src/network/: NetworkManager.cpp
client/src/ui/components/: MainMenu.cpp  PauseMenu.cpp
client/src/ui/managers/: UIManager.cpp
client/src/ui/scenes/: GameScene.cpp
client/src/ui/windows/: MainWindow.cpp
client/src/utils/: FileUtils.cpp  Logger.cpp
common/: CMakeLists.txt
common/include/models/: CharacterData.h
common/src/models/: CharacterModel.cpp
docs/api/: 前后端通信协议.md  战斗系统设计.md  技术实现指南.md  整体设计.md
docs/design/: README_数据库系统.md  剧情系统设计.md  数据库系统完成总结.md  数据库设计.md  游戏详细设计文档.md
docs/user/: 前端开发指南.md  开发计划.md  数据库使用指南.md  项目总结.md
mcp/: README.md  cursor_mcp_config.json  fantasy_legend_mcp.py  pyproject.toml  simple_mcp.py  start_mcp.sh  use_existing_mcp.py
server/: CMakeLists.txt  README.md  build.sh
server/config/: build_info.h.in  server.conf
server/docs/: ConfigManager_Architecture.md  Performance_Optimization_Guide.md  Project_Summary.md  ResourceSystem_API.md
server/examples/: data_persistence_example.cpp
server/include/core/: GameEngine.h
server/include/core/characters/: Character.h
server/include/core/combat/: Combat.h
server/include/core/items/: Item.h
server/include/core/levels/: Level.h
server/include/core/persistence/: DataPersistenceManager.h  README.md
server/include/core/quests/: Quest.h
server/include/core/skills/: Skill.h
server/include/data/: ResourceManager.h
server/include/data/config/: ConfigManager.h
server/include/data/database/: Database.h  DatabaseManager.h
server/include/utils/: AsyncQueue.h  LogSink.h  Logger.h  ServerFileUtils.h  SignalSink.h
server/include/utils/LogSys/: ConsoleSink.h  FileSink.h  LogLevel.h  LogType.h  Logger.h
server/include/utils/config/: ConfigManager.h  GameConfigManager.h
server/include/utils/resources/: AudioResource.h  ConfigResource.h  FontResource.h  MapResource.h  ModelResource.h  ResourceCache.h  ResourceCompressor.h  ResourceLoader.h  ResourceLogger.h  ResourceManager.h  ResourcePackager.h  ResourcePreloader.h  ResourceSystem.h  ResourceType.h  ResourceVersionControl.h  ScriptResource.h  TextureResource.h
server/scripts/: database_init.sql  setup_third_party.sh  start_server.sh
server/src/: main.cpp
server/src/core/: GameEngine.cpp
server/src/core/characters/: Character.cpp
server/src/core/combat/: Combat.cpp
server/src/core/items/: Item.cpp
server/src/core/levels/: Level.cpp
server/src/core/persistence/: DataPersistenceManager.cpp
server/src/core/quests/: Quest.cpp
server/src/core/skills/: Skill.cpp
server/src/data/: ResourceManager.cpp
server/src/data/config/: ConfigManager.cpp
server/src/data/database/: Database.cpp  DatabaseManager.cpp
server/src/utils/: ConsoleSink.cpp  FileSink.cpp  LogLevel.cpp  Logger.cpp  ServerFileUtils.cpp  SignalSink.cpp
server/src/utils/LogSys/: ConsoleSink.cpp  FileSink.cpp  LogLevel.cpp  Logger.cpp  SignalSink.cpp
server/src/utils/config/: ConfigManager.cpp  ConfigManagerExample.cpp  GameConfigManager.cpp
server/src/utils/resources/: ConfigResource.cpp  MapResource.cpp  ResourceCache.cpp  ResourceLoader.cpp  ResourceLogger.cpp  ResourceManager.cpp  ResourceSystem.cpp  ResourceSystemExample.cpp  ResourceType.cpp  ScriptResource.cpp  TextureResource.cpp
server/test/: CMakeLists.txt  test_data_persistence.cpp
tools/python/database/: database_seeder.py
tools/python/generators/: config_generator.py
tools/python/testing/: test_database.py
