[project]
name = "fantasy-legend-mcp"
version = "1.0.0"
description = "MCP server for Fantasy Legend game project development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
]

[project.scripts]
fantasy-legend-mcp = "fantasy_legend_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fantasy_legend_mcp.py"] 